fleet/ngnix-proxy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: github-proxy
  namespace: nginx-proxy
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    nginx.ingress.kubernetes.io/proxy-redirect-from: "https://dcruzf.github.io"
    nginx.ingress.kubernetes.io/proxy-redirect-to: "https://daniel.ci.ufpb.br"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      proxy_set_header Host dcruzf.github.io;
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - daniel.ci.ufpb.br
      secretName: daniel-ci-ufpb-tls
  rules:
    - host: daniel.ci.ufpb.br
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: external-github
                port:
                  number: 443
---
apiVersion: v1
kind: Service
metadata:
  name: external-github
  namespace: nginx-proxy
spec:
  type: ExternalName
  externalName: dcruzf.github.io
  ports:
    - port: 443
      targetPort: 443
